--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.30</version> <!-- Version souhaitée -->
         </dependency>
 
 
