--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,16 @@ version: "3.8"
 
 services:
   mysqldb:
-    image: mysql:8
+    image: mysql:8.4.0
     restart: unless-stopped
     environment:
       - MYSQL_ROOT_PASSWORD=
-      - MYSQL_DATABASE=tp-db
+      - MYSQL_DATABASE=tpFoyer_db
     ports:
       - 3306:3306
     volumes:
       - db:/var/lib/mysql
-  app-timesheet:
+  app-tpFoyer:
     depends_on:
       - mysqldb
     image: choucheniheb07/tp-foyer:1.0.0
