--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,40 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <!-- Plugin JaCoCo -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.8</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <!-- Préparation de l'agent JaCoCo pour enregistrer la couverture -->
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <!-- Génération du rapport JaCoCo -->
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>post-unit-test-report</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <!-- Génération d'un rapport en HTML après les tests -->
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <outputDirectory>${project.build.directory}/jacoco</outputDirectory>
+                    <dataFile>${project.build.directory}/jacoco.exec</dataFile>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
