--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.password=Asma123456@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-# Web Server (Tomcat) configuration :
+# Web Server (Tomcat) configurations :
 server.port=8089
 server.servlet.context-path=/tpfoyer
