--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.username=root
 spring.datasource.password=Asma123456@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+# Actuator settings
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
 
 # Web Server (Tomcat) configurations :
 server.port=8089
