--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,8 @@ spring.datasource.password=Asma123456@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 # Actuator settings
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=prometheus
 management.endpoint.prometheus.enabled=true
-
 # Web Server (Tomcat) configurations :
 server.port=8089
 server.servlet.context-path=/tpfoyer
