--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 # Actuator settings
 management.endpoints.web.exposure.include=prometheus
 management.endpoint.prometheus.enabled=true
+management.endpoints.web.base-path=/tpfoyer/actuator
 # Web Server (Tomcat) configurations :
 server.port=8089
 server.servlet.context-path=/tpfoyer
