--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,5 @@ management.endpoint.prometheus.enabled=true
 management.endpoints.web.base-path=/tpfoyer/actuator
 # Web Server (Tomcat) configurations :
 server.port=8089
+server.address=0.0.0.0
 server.servlet.context-path=/tpfoyer
