--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ spring.datasource.password=Asma123456@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 # Actuator settings
-management.endpoints.web.exposure.include=prometheus
+management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
-management.endpoints.web.base-path=/tpfoyer/actuator
+management.prometheus.metrics.export.enabled=true
 # Web Server (Tomcat) configurations :
 server.port=8089
-server.address=0.0.0.0
 server.servlet.context-path=/tpfoyer
