--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,27 +3,27 @@ version: "3.8"
 services:
   mysqldb:
     image: mysql:8.0.30
-    restart: unless-stopped
+    restart: always
     environment:
-      - MYSQL_ROOT_PASSWORD=
+      - MYSQL_ROOT_PASSWORD=Asma123456@
       - MYSQL_DATABASE=foyer_db
     ports:
       - 3306:3306
     volumes:
       - db:/var/lib/mysql
+
   app-timesheet:
     depends_on:
       - mysqldb
     image: asmasl/tp-foyer:1.0.0
-    #build : ./
     restart: on-failure
     ports:
       - 8089:8089
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://localhost:3306/foyer_db?createDatabaseIfNotExist=true",
+        "spring.datasource.url" : "jdbc:mysql://mysqldb:3306/foyer_db?createDatabaseIfNotExist=true",
         "spring.datasource.username" : "root",
-        "spring.datasource.password" : null,
+        "spring.datasource.password" : "Asma123456@",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
