--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/foyer_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Asma123456@
-spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 # Actuator settings
 management.endpoints.web.exposure.include=*
