--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mysql:8.0.30
     restart: unless-stopped
     environment:
-      - MYSQL_ROOT_PASSWORD=Asma123456@
+      - MYSQL_ROOT_PASSWORD="Asma123456@"
       - MYSQL_DATABASE=foyer_db
     ports:
       - 3306:3306
