--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,12 @@ management.prometheus.metrics.export.enabled=true
 # Web Server (Tomcat) configurations :
 server.port=8089
 server.servlet.context-path=/tpfoyer
+
+# SQL Logging
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# HikariCP settings
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
