--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.30</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.5.3.Final</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
