--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-
 # DB Configuration :
 spring.datasource.url=jdbc:mysql://localhost:3306/foyer_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Asma123456@
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Actuator settings
 management.endpoints.web.exposure.include=*
 management.endpoint.metrics.enabled=true
@@ -13,12 +13,3 @@ management.prometheus.metrics.export.enabled=true
 # Web Server (Tomcat) configurations :
 server.port=8089
 server.servlet.context-path=/tpfoyer
-
-# SQL Logging
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# HikariCP settings
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=5
