--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mysql:8.0.30
     restart: unless-stopped
     environment:
-      - MYSQL_ROOT_PASSWORD="Asma123456@"
+      - MYSQL_ROOT_PASSWORD=
       - MYSQL_DATABASE=foyer_db
     ports:
       - 3306:3306
@@ -23,7 +23,7 @@ services:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url" : "jdbc:mysql://mysqldb:3306/foyer_db?createDatabaseIfNotExist=true",
         "spring.datasource.username" : "root",
-        "spring.datasource.password" : "Asma123456@",
+        "spring.datasource.password" : null,
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
