--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # DB Configuration :
-spring.datasource.url=jdbc:mysql://localhost:3306/foyer_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/foyer_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Asma123456@
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Actuator settings
 management.endpoints.web.exposure.include=*
