--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
         "spring.datasource.url" : "jdbc:mysql://mysqldb:3306/foyer_db?createDatabaseIfNotExist=true",
         "spring.datasource.username" : "root",
         "spring.datasource.password" :"Asma123456@",
-        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL8Dialect"
+        "spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect"
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
     stdin_open: true
