--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DB Configuration :
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/foyer_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/foyer_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Asma123456@
 spring.jpa.show-sql=true
