--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mysql:8.0.30
     restart: unless-stopped
     environment:
-      - MYSQL_ROOT_PASSWORD=
+      - MYSQL_ROOT_PASSWORD=Asma123456@
       - MYSQL_DATABASE=foyer_db
     ports:
       - 3306:3306
@@ -21,9 +21,9 @@ services:
       - 8092:8092
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url" : "jdbc:mysql://localhost:3306/foyer_db?createDatabaseIfNotExist=true",
+        "spring.datasource.url" : "jdbc:mysql://mysqldb:3306/foyer_db?createDatabaseIfNotExist=true",
         "spring.datasource.username" : "root",
-        "spring.datasource.password" :null,
+        "spring.datasource.password" :"Asma123456@",
         "spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect"
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
