--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,25 +5,25 @@ services:
     image: mysql:5.7
     restart: unless-stopped
     environment:
-      - MYSQL_ROOT_PASSWORD=
+      - MYSQL_ROOT_PASSWORD=0000
       - MYSQL_DATABASE=tpFoyer_db
     ports:
       - 3306:3306
     volumes:
       - db:/var/lib/mysql
+
   app-tpFoyer:
     depends_on:
       - mysqldb
     image: choucheniheb07/tp-foyer:1.0.0
-    #build : ./
     restart: on-failure
     ports:
       - 8089:8089
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/db?createDatabaseIfNotExist=true",
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/tpFoyer_db?createDatabaseIfNotExist=true",
         "spring.datasource.username" : "root",
-        "spring.datasource.password" : null,
+        "spring.datasource.password" : "your_secure_password",  # match the password above
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
@@ -31,4 +31,4 @@ services:
     tty: true
 
 volumes:
-  db :
+  db:
