--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,19 +11,19 @@ services:
       - 3306:3306
     volumes:
       - db:/var/lib/mysql
-
   app-tpFoyer:
     depends_on:
       - mysqldb
     image: choucheniheb07/tp-foyer:1.0.0
+    #build : ./
     restart: on-failure
     ports:
       - 8089:8089
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/tpFoyer_db?createDatabaseIfNotExist=true",
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/db?createDatabaseIfNotExist=true",
         "spring.datasource.username" : "root",
-        "spring.datasource.password" : "0000",  # match the password above
+        "spring.datasource.password" : 0000,
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
@@ -31,4 +31,4 @@ services:
     tty: true
 
 volumes:
-  db:
+  db :
