--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - 8092:8092
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url" : "jdbc:mysql://mysqldb:3306/foyer_db?createDatabaseIfNotExist=true",
+        "spring.datasource.url" : "jdbc:mysql://localhost:3306/foyer_db?createDatabaseIfNotExist=true",
         "spring.datasource.username" : "root",
         "spring.datasource.password" :"Asma123456@",
         "spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect"
