--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,14 @@ services:
     image: mysql:8.0.30
     restart: unless-stopped
     environment:
-      - MYSQL_ROOT_PASSWORD=Asma123456@
+      - MYSQL_ROOT_PASSWORD=
       - MYSQL_DATABASE=foyer_db
     ports:
       - 3306:3306
     volumes:
       - db:/var/lib/mysql
 
-  app-timesheet:
+  app-foyer:
     depends_on:
       - mysqldb
     image: asmasl/tp-foyer:1.0.0
@@ -23,8 +23,7 @@ services:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url" : "jdbc:mysql://mysqldb:3306/foyer_db?createDatabaseIfNotExist=true",
         "spring.datasource.username" : "root",
-        "spring.datasource.password" :"Asma123456@",
-        "spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect"
+        "spring.datasource.password" :null,
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
     stdin_open: true
