--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mysql:8.0.30
     restart: unless-stopped
     environment:
-      - MYSQL_ROOT_PASSWORD=Asma123456@
+      - MYSQL_ROOT_PASSWORD=
       - MYSQL_DATABASE=foyer_db
     ports:
       - 3306:3306
@@ -18,12 +18,12 @@ services:
     image: asmasl/tp-foyer:1.0.0
     restart: on-failure
     ports:
-      - 8092:8092
+      - 8092:8089
     environment:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url" : "jdbc:mysql://mysqldb:3306/foyer_db?createDatabaseIfNotExist=true",
         "spring.datasource.username" : "root",
-        "spring.datasource.password" :"Asma123456@",
+        "spring.datasource.password" :null,
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
     stdin_open: true
