--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,12 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+
+management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
+management.prometheus.metrics.export.enabled=true
+
 # Web Server (Tomcat) configurations :
 server.port=8089
 server.servlet.context-path=/tpfoyer
