--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,11 @@ spring.datasource.password=Asma123456@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-
+# prometheus configurations :
 management.endpoints.web.exposure.include=*
 management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
 management.prometheus.metrics.export.enabled=true
-
 # Web Server (Tomcat) configurations :
 server.port=8089
 server.servlet.context-path=/tpfoyer
