--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,11 @@
 
     <build>
         <plugins>
-
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.1.2184</version> <!-- Assurez-vous de vérifier la version actuelle -->
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
